--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -28,7 +28,7 @@
 }
 
 .menuSection {
-  padding: var(--dimension-space-050);
+  padding: var(--dimension-space-100);
   display: flex;
   flex-direction: column;
   gap: var(--dimension-space-050);
