--- a/src/wc/components/Menu/Menu.css
+++ b/src/wc/components/Menu/Menu.css
@@ -34,8 +34,8 @@
 .menu-section {
   display: flex;
   flex-direction: column;
-  gap: var(--dimension-space-025);
-  padding: var(--dimension-space-050);
+  gap: var(--dimension-space-050);
+  padding: var(--dimension-space-100);
 }
 
 .menu-section--divided {
@@ -64,7 +64,7 @@
   position: relative;
   width: 100%;
   min-height: var(--dimension-size-400);
-  padding: var(--dimension-space-075);
+  padding: var(--dimension-space-100);
   box-sizing: border-box;
   border: none;
   border-radius: var(--dimension-radius-025);
